--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_USER=user1
-MONGO_PASS=cdac@123#
-MONGO_HOST=10.226.53.238
+MONGO_PASS=cdac012654
+MONGO_HOST=65.1.218.101
 MONGO_DB=textdata
 SECRET_KEY = "Xp2HrE0cJ8zA7GfL6MqNvK9BtO5UdI3WjPwY4TlQxS1RyZnFmDgVkx"
